# pitlane-SGO

./: .dockerignore  .gitignore  .ruff.toml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: shell_driver_example.py
examples/gates/: warehouse.yml
examples/logs/: drive_loop.json
examples/ros2_bag/: metadata.yaml
src/pitlane_simgate/: cli.py  crypto.py  gate.py  models.py  report.py  ros2_adapter.py  runner.py  scenario.py  utils.py
tests/: test_grid_and_gate.py  test_ros2_adapter.py
